<?xml version="1.0"?>
<package format="3">
  <name>neo_msgs</name>
  <version>0.1.0</version>
  <description>
	This package contains messages for neobotix mobile robots.
  </description>
  <maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>
  <author>Pradheep Krishna M P</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
